Completed refactor with "Shop" and "Comments" fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
     <string name="app_name">MyReceipts</string>
-    <string name="receipt_title_hint">Enter a title for the receipt.</string>
+    <string name="receipt_title_hint">Enter title for receipt.</string>
     <string name="receipt_title_label">Receipt</string>
     <string name="receipt_shop_hint">Enter the shop name.</string>
     <string name="receipt_details_label">Details</string>
     <string name="receipt_comment_hint">Add a comment.</string>
+    <string name="date_picker_title">Date of crime:</string>
+    <string name="new_receipt">New Receipt</string>
+    <string name="help">Help</string>
+    <string name="delete_receipt">Delete Receipt</string>
+    <string name="receipt_report">Send Receipt Report</string>
+    <string name="crime_report">%1$s!
+The crime was discovered on %2$s. %3$s, and %4$s
+</string>
+    <string name="receipt_report_subject">MyReceipt Report</string>
+    <string name="send_report">Send receipt report via</string>
 </resources>
